[build-system]
requires = ["setuptools>=65.6.3", "setuptools-git-versioning>=1.13.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "untappr"
description = "Tool for parsing and displaying info from an Untappd JSON export."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools-git-versioning>=1.13.0",
    "build>=0.9.0",
]
dynamic = ["version"]

[project.scripts]
untappr = "untappr:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
